--- a/LITRevu/users/templates/profile.html
+++ b/LITRevu/users/templates/profile.html
@@ -64,23 +64,61 @@ Edit Profile
 {% endblock %}
 
 {% block second_page_title %}
-People you follow
+Relations
 {% endblock %}
 
 {% block second_page_content %}
 <div>
-{% for user in followed_users %}
-<li>
-    <a href="{% url 'user_detail' user.pk %}">{{ user.username }}</a>
-    <button class="follow-btn icon-hover-box" data-user-id="{{ user.pk }}" data-url="{% url 'toggle_follow' user.pk %}" data-token="{{ csrf_token }}">
-        {% if user.followers_status %}
-            <i class="icon-user-minus"></i>
-        {% else %}
-            <i class="icon-user-plus"></i>
-        {% endif %}
-    </button>
-</li>
-{% endfor %}
+    <h3>People you follow</h3>
+    <ul>
+    {% for user in followed_users %}
+    <li>
+        <a href="{% url 'user_detail' user.pk %}">{{ user.username }}</a>
+        <button class="follow-btn icon-hover-box" data-user-id="{{ user.pk }}" data-url="{% url 'toggle_follow' user.pk %}" data-token="{{ csrf_token }}">
+            {% if user.followers_status %}
+                <i class="icon-user-minus"></i>
+            {% else %}
+                <i class="icon-user-plus"></i>
+            {% endif %}
+        </button>
+    </li>
+    {% endfor %}
+    </ul>
+</div>
+<div>
+    <h3>People following you</h3>
+    <ul>
+    {% for user in following_users %}
+    <li>
+        <a href="{% url 'user_detail' user.pk %}">{{ user.username }}</a>
+        <button class="follow-btn icon-hover-box" data-user-id="{{ user.pk }}" data-url="{% url 'toggle_follow' user.pk %}" data-token="{{ csrf_token }}">
+            {% if user.followers_status %}
+                <i class="icon-user-minus"></i>
+            {% else %}
+                <i class="icon-user-plus"></i>
+            {% endif %}
+        </button>
+    </li>
+    {% endfor %}
+    </ul>
+</div>
+<div>
+    <h3>Find new people</h3>
+    <input type="text" id="filterInput" placeholder="Search...">
+    <ul>
+    {% for user in users_list %}
+    <li class="user-li d-none">
+        <a href="{% url 'user_detail' user.pk %}">{{ user.username }}</a>
+        <button class="follow-btn icon-hover-box" data-user-id="{{ user.pk }}" data-url="{% url 'toggle_follow' user.pk %}" data-token="{{ csrf_token }}">
+            {% if user.followers_status %}
+                <i class="icon-user-minus"></i>
+            {% else %}
+                <i class="icon-user-plus"></i>
+            {% endif %}
+        </button>
+    </li>
+    {% endfor %}
+    </ul>
 </div>
 {% endblock %}
 
