--- a/LITRevu/tickets/templates/ticket_list.html
+++ b/LITRevu/tickets/templates/ticket_list.html
@@ -10,7 +10,7 @@
 Tickets
 {% endblock %}
 {% block content %}
-<input type="text" id="filterInput" placeholder="Search...">
+<div class="icon-hover-box search-block"><i class="icon-search"></i><input type="text" id="filterInput" placeholder="Search..."></div>
 {% endblock %}
 
 {% block second_page_title %}
