--- a/LITRevu/app/static/css/styles.css
+++ b/LITRevu/app/static/css/styles.css
@@ -140,7 +140,7 @@ form {
 }
 
 .navigation-menu li a:hover {
-    transform: scale(1.3);
+    transform: scale(1.2);
     text-shadow: none;
 }
 
@@ -478,6 +478,15 @@ footer p {
     margin-right: 8px;
 }
 
+.follow-btn {
+    padding-right: 0;
+}
+
+.follow-btn i,
+.block-btn i {
+    margin: 0;
+}
+
 .success {
     background-color: var(--success-colour);
 }
@@ -660,6 +669,16 @@ footer p {
 
 .icon-hover-box:hover .icon-search {
     color: rgb(153, 153, 153);
+    transform: scale(1.2);
+}
+
+.icon-hover-box:hover .icon-blocked.not-validation {
+    color: rgb(236, 202, 158);
+    transform: scale(1.2);
+}
+
+.icon-hover-box:hover .icon-checkmark.not-validation {
+    color: rgb(166 232 166);
     transform: scale(1.2);
 }
 
