--- a/LITRevu/tickets/templates/ticket_list.html
+++ b/LITRevu/tickets/templates/ticket_list.html
@@ -28,7 +28,7 @@ Tickets
             <div class="item-background" style="background-image:url({{ ticket.image.url }})"></div>
             {% endif %}
           <h3 class="aligned item-infos">
-          <a class="ticket-title item-title view-ticket-btn" data-item-id="{{ ticket.pk }}" href="">{{ ticket.title }}</a>
+          <a class="ticket-title item-title view-ticket-btn title" data-item-id="{{ ticket.pk }}" href="">{{ ticket.title }}</a>
             {% if request.user == ticket.author or request.user.is_superuser %}
               <button type="button" id="edit-ticket-btn" name="edit-ticket" class="ticket-edit-btn icon-hover-box" data-item-id="{{ ticket.pk }}" data-item-name="{{ ticket.title }}" data-item-action="{% url 'ticket_update' ticket.pk %}"><i class="icon-pencil crud-btn"></i></button>
               <button type="button" id="delete-ticket-btn" name="delete-ticket" class="ticket-delete-btn icon-hover-box" data-item-id="{{ ticket.pk }}" data-item-name="{{ ticket.title }}" data-item-action="{% url 'ticket_delete' ticket.pk %}"><i class="icon-bin crud-btn"></i></button>
@@ -83,44 +83,46 @@ Tickets
             {% for review in ticket.reviews.all %}
               {% if not review.is_archived %}
                 <li id="review-{{ review.pk }}">
-                  <div class="item-container">
+                  <div class="review-container icon-hover-box">
                     {% if review.cover_image %}
-                    <div class="item-background" style="background-image:url({{ review.cover_image.url }})"></div>
+                    <div class="review-img" style="background-image:url({{ review.cover_image.url }})"></div>
                     {% endif %}
-                    <h4 class="aligned item-infos">
-                      <a class="item-title icon-hover-box view-review-btn" data-item-id="{{ review.pk }}" href="" class="aligned icon-hover-box">
-                      <span class="font-style">{{ review.title }}</span>
-                      <i class="icon-eye-plus"></i>
-                      </a>
-                      {% if request.user == review.author or request.user.is_superuser %}
-                        <button type="button" id="edit-review-btn" name="edit-review" class="review-edit-btn icon-hover-box" data-item-id="{{ review.pk }}" data-item-name="{{ review.title }}" data-item-action="{% url 'review_update' review.pk %}"><i class="icon-pencil crud-btn"></i></button>
-                        <button type="button" id="delete-review-btn" name="delete-review" class="review-delete-btn icon-hover-box" data-item-id="{{ review.pk }}" data-item-name="{{ review.title }}" data-item-action="{% url 'review_delete' review.pk %}"><i class="icon-bin crud-btn"></i></button>
-                      {% endif %}
-                    </h4>
-                    <p><a class="item-infos view-review-btn" data-item-id="{{ review.pk }}" href="">{{ review.content }}</a></p>
-                    <p class="item-infos mini-font">
-                      <span>Posted on {{ review.created_at|date:"F j, Y" }} by </span>
-                      {% if request.user != review.author %}
-                      <span>{{ review.author }}</span>
-                      <button class="follow-btn icon-hover-box" data-user-id="{{ review.author.pk }}" data-url="{% url 'toggle_follow' review.author.pk %}" data-token="{{ csrf_token }}">
-                        {% if request.user|is_following:review.author %}
-                            <i class="icon-user-minus"></i>
-                        {% else %}
-                            <i class="icon-user-plus"></i>
+                    <div class="review-infos">
+                      <h4 class="aligned item-infos">
+                        <a class="item-title icon-hover-box view-review-btn" data-item-id="{{ review.pk }}" href="" class="aligned icon-hover-box">
+                        <span class="font-style title">{{ review.title }}</span>
+                        <i class="icon-eye-plus"></i>
+                        </a>
+                        {% if request.user == review.author or request.user.is_superuser %}
+                          <button type="button" id="edit-review-btn" name="edit-review" class="review-edit-btn icon-hover-box" data-item-id="{{ review.pk }}" data-item-name="{{ review.title }}" data-item-action="{% url 'review_update' review.pk %}"><i class="icon-pencil crud-btn"></i></button>
+                          <button type="button" id="delete-review-btn" name="delete-review" class="review-delete-btn icon-hover-box" data-item-id="{{ review.pk }}" data-item-name="{{ review.title }}" data-item-action="{% url 'review_delete' review.pk %}"><i class="icon-bin crud-btn"></i></button>
                         {% endif %}
-                      </button>
-                      <button class="block-btn icon-hover-box" data-user-id="{{ review.author.pk }}" data-url="{% url 'toggle_block' review.author.pk %}" data-token="{{ csrf_token }}">
-                          {% if review.author in blocked_users %}
-                              <i class="icon-checkmark not-validation"></i>
-                          {% else %}
-                              <i class="icon-blocked not-validation"></i>
-                          {% endif %}
-                      </button>
+                      </h4>
+                      <p><a class="item-infos view-review-btn font-style" data-item-id="{{ review.pk }}" href="">{{ review.content }}</a></p>
+                    </div>
+                  </div>
+                  <p class="item-infos mini-font">
+                    <span>Posted on {{ review.created_at|date:"F j, Y" }} by </span>
+                    {% if request.user != review.author %}
+                    <span>{{ review.author }}</span>
+                    <button class="follow-btn icon-hover-box" data-user-id="{{ review.author.pk }}" data-url="{% url 'toggle_follow' review.author.pk %}" data-token="{{ csrf_token }}">
+                      {% if request.user|is_following:review.author %}
+                          <i class="icon-user-minus"></i>
                       {% else %}
-                      you
+                          <i class="icon-user-plus"></i>
                       {% endif %}
-                    </p>
-                  <div>
+                    </button>
+                    <button class="block-btn icon-hover-box" data-user-id="{{ review.author.pk }}" data-url="{% url 'toggle_block' review.author.pk %}" data-token="{{ csrf_token }}">
+                        {% if review.author in blocked_users %}
+                            <i class="icon-checkmark not-validation"></i>
+                        {% else %}
+                            <i class="icon-blocked not-validation"></i>
+                        {% endif %}
+                    </button>
+                    {% else %}
+                    you
+                    {% endif %}
+                  </p>
                 </li>
               {% endif %}
             {% endfor %}
