--- a/LITRevu/tickets/templates/ticket_list.html
+++ b/LITRevu/tickets/templates/ticket_list.html
@@ -36,17 +36,17 @@ Tickets
               <button type="button" id="delete-ticket-btn" name="delete-ticket" class="ticket-delete-btn icon-hover-box" data-item-id="{{ ticket.pk }}" data-item-name="{{ ticket.title }}" data-item-action="{% url 'ticket_delete' ticket.pk %}"><i class="icon-bin crud-btn"></i></button>
             {% endif %}
           </h3>
-          <a class="item-infos view-ticket-btn" data-item-id="{{ ticket.pk }}" href=""><p class="ticket-description">{{ ticket.description }}</p></a>
+          <a class="item-infos view-ticket-btn" data-item-id="{{ ticket.pk }}" href=""><p class="ticket-description sample-text">{{ ticket.description }}</p></a>
           <div class="tag-container item-infos">
             {% for tag in ticket.tags.all %}
             <div class="tag">{{ tag.name }}</div>
             {% endfor %}
           </div>
           <div class="item-infos info-likes-block">
-            <p>
+            <p class="no-margin">
               <span>Posted on {{ ticket.created_at|date:"F j, Y" }} by </span>
               {% if request.user != ticket.author %}
-              <span class="custom-colour-target">{{ ticket.author }}</span>    
+              <span class="custom-colour-target author">{{ ticket.author }}</span>    
               <button class="follow-btn icon-hover-box" data-user-id="{{ ticket.author.pk }}" data-url="{% url 'toggle_follow' ticket.author.pk %}">
                 {% if request.user|is_following:ticket.author %}
                   <i class="icon-user-minus"></i>
@@ -103,14 +103,14 @@ Tickets
                         {% endfor %}
                         </div>
                       </h4>
-                      <p><a class="item-infos view-review-btn font-style" data-item-id="{{ review.pk }}" href="">{{ review.content }}</a></p>
+                      <a class="item-infos view-review-btn font-style" data-item-id="{{ review.pk }}" href=""><p class="sample-text">{{ review.content }}</p></a>
                     </div>
                   </div>
                   <div class="item-infos info-likes-block mini-likes">
                     <p class="mini-font">
                       <span>Posted on {{ review.created_at|date:"F j, Y" }} by </span>
                       {% if request.user != review.author %}
-                      <span class="custom-colour-target">{{ review.author }}</span>
+                      <span class="custom-colour-target author">{{ review.author }}</span>
                       <button class="follow-btn icon-hover-box" data-user-id="{{ review.author.pk }}" data-url="{% url 'toggle_follow' review.author.pk %}">
                         {% if request.user|is_following:review.author %}
                             <i class="icon-user-minus"></i>
@@ -281,10 +281,10 @@ Tickets
           <label for="{{ review_form.rating.id_for_label }}">Rating:</label>
           <div id="editSingleRating" class="rating">
             {% for i in "543210" %}
-            <input type="radio" name="rating" id="star-{{ i }}" value="{{ i }}" class="rating-edit-review-input">
-            <label for="star-{{ i }}" title="{{ i }} stars" class="rating-edit-review-label">☆</label>
+            <input type="radio" name="ratinge" id="stare-{{ i }}" value="{{ i }}" class="rating-edit-review-input">
+            <label for="stare-{{ i }}" title="{{ i }} stars" class="rating-edit-review-label">☆</label>
             {% endfor %}
-        </div>
+          </div>
           {% if review_form.rating.errors %}
             <div class="error">{{ review_form.rating.error }}</div>
           {% endif %}
@@ -383,10 +383,10 @@ Tickets
               <label for="{{ ticket_form.review_rating.id_for_label }}">Rating:</label>
               <div id="createTicketReviewRating" class="rating">
                 {% for i in "543210" %}
-                <input type="radio" name="rating1" id="star1-{{ i }}" value="{{ i }}" class="rating-create-ticket-review-input">
-                <label for="star1-{{ i }}" title="{{ i }} stars" class="rating-create-ticket-review-label">☆</label>
+                <input type="radio" name="ratingt" id="start-{{ i }}" value="{{ i }}" class="rating-create-ticket-review-input">
+                <label for="start-{{ i }}" title="{{ i }} stars" class="rating-create-ticket-review-label">☆</label>
                 {% endfor %}
-            </div>
+              </div>
               {% if ticket_form.review_rating.errors %}
                 <div class="error">{{ ticket_form.review_rating.error }}</div>
               {% endif %}
@@ -433,12 +433,12 @@ Tickets
         </div>
         <div class="item-infos">
           <label for="{{ review_form.rating.id_for_label }}">Rating:</label>
-          <div id="createSingleRating" class="rating">
-            {% for i in "543210" %}
-            <input type="radio" name="rating" id="star-{{ i }}" value="{{ i }}" class="rating-create-single-input">
-            <label for="star-{{ i }}" title="{{ i }} stars" class="rating-create-single-label">☆</label>
-            {% endfor %}
-        </div>
+            <div id="createReviewRating" class="rating">
+              {% for i in "543210" %}
+              <input type="radio" name="ratingc" id="starc-{{ i }}" value="{{ i }}" class="rating-create-review-input">
+              <label for="starc-{{ i }}" title="{{ i }} stars" class="rating-create-review-label">☆</label>
+              {% endfor %}
+            </div>
           {% if review_form.rating.errors %}
             <div class="error">{{ review_form.rating.error }}</div>
           {% endif %}
