populating user view modal logic creation / handle broken img

--- a/LITRevu/app/static/css/styles.css
+++ b/LITRevu/app/static/css/styles.css
@@ -371,6 +371,10 @@ footer p {
     left: 0;
 }
 
+.author:hover {
+    cursor: pointer;
+}
+
 .blue {
     font-family: var(--main-font-style);
     color: rgb(124, 182, 209);
