--- a/LITRevu/tickets/templates/ticket_list.html
+++ b/LITRevu/tickets/templates/ticket_list.html
@@ -27,7 +27,7 @@ Tickets
         <li id="ticket-{{ ticket.pk }}" class="ticket-li">
           <div class="item-container">
             {% if ticket.image %}
-            <div class="item-background" style="background-image:url({{ ticket.image.url }})"></div>
+            <div class="item-background" data-src="{{ ticket.image.url }}" style="background-image:url({{ ticket.image.url }})"></div>
             {% endif %}
           <h3 class="aligned item-infos stylish-header">
           <a class="ticket-title item-title view-ticket-btn title custom-colour-target" data-item-id="{{ ticket.pk }}" href="">{{ ticket.title }}</a>
@@ -46,7 +46,7 @@ Tickets
             <p class="no-margin">
               <span>Posted on {{ ticket.created_at|date:"F j, Y" }} by </span>
               {% if request.user != ticket.author %}
-              <span class="custom-colour-target author">{{ ticket.author }}</span>    
+              <span class="custom-colour-target author" data-item-id="{{ ticket.author.pk }}">{{ ticket.author }}</span>    
               <button class="follow-btn icon-hover-box" data-user-id="{{ ticket.author.pk }}" data-url="{% url 'toggle_follow' ticket.author.pk %}">
                 {% if request.user|is_following:ticket.author %}
                   <i class="icon-user-minus"></i>
@@ -86,7 +86,7 @@ Tickets
                 <li id="review-{{ review.pk }}">
                   <div class="review-container">
                     {% if review.cover_image %}
-                    <div class="review-img" style="background-image:url({{ review.cover_image.url }})"></div>
+                    <div class="review-img" data-src="{{ review.cover_image.url }}" style="background-image:url({{ review.cover_image.url }})"></div>
                     {% endif %}
                     <div class="review-infos">
                       <h4 class="aligned item-infos stylish-header">
@@ -98,9 +98,11 @@ Tickets
                           <button type="button" id="delete-review-btn" name="delete-review" class="review-delete-btn icon-hover-box" data-item-id="{{ review.pk }}" data-item-name="{{ review.title }}" data-item-action="{% url 'review_delete' review.pk %}"><i class="icon-bin crud-btn"></i></button>
                         {% endif %}
                         <div class="rating-preview">
-                        {% for _ in "x"|rjust:review.rating %}
-                        ☆
-                        {% endfor %}
+                        {% if review.rating != 0 %}
+                          {% for _ in "x"|rjust:review.rating %}
+                          ☆
+                          {% endfor %}
+                        {% endif %}
                         </div>
                       </h4>
                       <a class="item-infos view-review-btn font-style" data-item-id="{{ review.pk }}" href=""><p class="sample-text">{{ review.content }}</p></a>
@@ -110,7 +112,7 @@ Tickets
                     <p class="mini-font">
                       <span>Posted on {{ review.created_at|date:"F j, Y" }} by </span>
                       {% if request.user != review.author %}
-                      <span class="custom-colour-target author">{{ review.author }}</span>
+                      <span class="custom-colour-target author" data-item-id="{{ review.author.pk }}">{{ review.author }}</span>
                       <button class="follow-btn icon-hover-box" data-user-id="{{ review.author.pk }}" data-url="{% url 'toggle_follow' review.author.pk %}">
                         {% if request.user|is_following:review.author %}
                             <i class="icon-user-minus"></i>
@@ -476,6 +478,17 @@ Tickets
   </div>
 </div>
 
+<div id="viewUserModal" class="modal">
+  <div class="notepad margin-auto" method="post">
+    <div class="page right">
+      <div class="page-content" id="viewUserContainer">
+      </div>
+      <i class="icon-cross close icon-hover-box" id="viewUserModalCloseBtn"></i>
+    </div>
+    <div class="spiral single-page-spiral"></div>
+  </div>
+</div>
+
 {% endblock %}
 
 {% block js %}
@@ -514,6 +527,15 @@ const reviewsData = [
     isArchived: "{{ review.is_archived }}"
 },
 {% endfor %}
+{% endfor %}
+];
+const usersData = [
+{% for user in users %}
+{
+    id: "{{ user.pk }}",
+    username: "{{ user.username|escapejs }}",
+    profilePicture: "{% if user.profile_picture %}{{ user.profile_picture.url }}{% else %}/static/images/litrevulogotitleless.PNG{% endif %}"
+},
 {% endfor %}
 ];
 </script>
