Handle follow users within user detail modal

--- a/LITRevu/users/templates/profile.html
+++ b/LITRevu/users/templates/profile.html
@@ -219,6 +219,7 @@
 <script>
     const jsCsrfToken = "{{ csrf_token }}";
 </script>
+<script src="{% static 'js/DOMBuilder.js' %}"></script>
 <Script src="{% static 'js/modal_ajax_query.js' %}"></Script>
 <script src="{% static 'js/users.js' %}"></script>
 <script src="{% static 'js/user_profile_script.js' %}"></script>
