--- a/LITRevu/tickets/templates/ticket_list.html
+++ b/LITRevu/tickets/templates/ticket_list.html
@@ -322,7 +322,7 @@ Tickets
 </div>
 
 <div id="viewTicketModal" class="modal">
-  <div class="notepad margin-auto" method="post">
+  <div class="notepad view-modal margin-auto" method="post">
     <div class="page right">
       <div class="page-content" id="viewTicketContainer">
       </div>
@@ -333,7 +333,7 @@ Tickets
 </div>
 
 <div id="viewReviewModal" class="modal">
-  <div class="notepad margin-auto" method="post">
+  <div class="notepad view-modal margin-auto" method="post">
     <div class="page right">
       <div class="page-content" id="viewReviewContainer">
       </div>
@@ -344,7 +344,7 @@ Tickets
 </div>
 
 <div id="viewUserModal" class="modal">
-  <div class="notepad margin-auto" method="post">
+  <div class="notepad view-modal margin-auto" method="post">
     <div class="page right">
       <div class="page-content" id="viewUserContainer">
       </div>
@@ -377,7 +377,8 @@ Tickets
       isFollowing: "{{ request.user|is_following:ticket.author }}",
       createdAt: "{{ ticket.created_at }}",
       likesCount: "{{ ticket.likes_count }}",            
-      dislikesCount: "{{ ticket.dislikes_count }}"
+      dislikesCount: "{{ ticket.dislikes_count }}",
+      reviews: "{{ ticket.reviews.all }}"
   }{% if not forloop.last %},{% endif %}
   {% endfor %}
 ];
