--- a/LITRevu/tickets/templates/ticket_list.html
+++ b/LITRevu/tickets/templates/ticket_list.html
@@ -24,7 +24,7 @@ Your friends' <span class="colour-{{ col5 }}">Tickets</span>
     <div id="ticket-container">
       {% include "partial_ticket_list.html" %}
     </div>
-    <div id="loading" style="display: none;">Loading...</div>
+    <div id="loading" style="display: none;"><i class="icon-spinner8"></i></div>
   {% endif %}
 {% endblock %}
 {% block modals %}
