--- a/LITRevu/app/static/css/styles.css
+++ b/LITRevu/app/static/css/styles.css
@@ -484,6 +484,26 @@ footer p {
     flex: 1;
 }
 
+#loading {
+    z-index: 3;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.7);
+    backdrop-filter: blur(3px);
+}
+
+.icon-spinner8 {
+    font-size: 32px;;
+    position: fixed;
+    top: calc(50% - 24px);
+    left: calc(50% - 24px);
+    color: white;
+    animation: rotate 1s linear infinite;
+}
+
 .item-infos {
     position: relative;
     z-index: 1;
@@ -837,4 +857,13 @@ footer p {
     transition-property: color, transform;
     transition-duration: 0.3s;
     transition-timing-function: ease-in;
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
