added tickets you might like placeholder as poc

--- a/LITRevu/tickets/templates/ticket_list.html
+++ b/LITRevu/tickets/templates/ticket_list.html
@@ -10,6 +10,7 @@
 <span class="colour-{{ col1 }}">Tickets</span> you might like
 {% endblock %}
 {% block content %}
+{% include "partial_suggested_ticket_list.html" %}
 {% endblock %}
 
 {% block second_page_title %}
